--- a/index.html
+++ b/index.html
@@ -4441,6 +4441,10 @@
 
             <p>50 Android Hacks这本书分12个部分介绍了50个Android开发的小技巧。</p>
 
+						<p><a href="http://siberiawolf.com/free_programming/index.html">免费的编程中文书籍索引</a>
+            </p>
+						
+
             <h1 id="license">
                 <a name="license" class="anchor" href="#license">
                     <span class="octicon octicon-link"></span>
