--- a/index.html
+++ b/index.html
@@ -3696,6 +3696,13 @@
                         </td>
                         <td align="center"></td>
                     </tr>
+                    <tr>
+                        <td align="left">PxCook像素大厨</td>
+                        <td>UI设计师效率提升利器，让你专注于设计本质，<br/>不再为标注切图而烦恼，从设计到实现一气呵成</td>
+                        <td align="center"><a href="http://www.fancynode.com.cn/">下载</a>
+                        </td>
+                        <td align="center"><a href="http://www.fancynode.com.cn/tutorial">使用教程</a></td>
+                    </tr>
                 </tbody>
             </table>
 
