--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.2 Beta2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1ntyww5r">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1sjHRbi9">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1jGzOx0M">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.2 Beta</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1c0cZHXu">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1bnrUSBd">下载</a></td>
