Add Android Studio 1.2 Beta3

--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.2 Beta3</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3gT9Rn">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1eQnLwhO">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/154yIE">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.2 Beta2</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1ntyww5r">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1sjHRbi9">下载</a></td>
