Add Android Studio 1.2 RC Link

--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.2 RC</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1eQdCBC2">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dDztuMH">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1nt20Pvj">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.2 Beta3</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i3gT9Rn">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1eQnLwhO">下载</a></td>
