Add Android Studio 1.2 RC2、RC3 And Release Version Link

--- a/index.html
+++ b/index.html
@@ -225,6 +225,24 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.2 正式版</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mgKehW8">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1sj0rdF3">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dD0F5b7">下载</a></td>
+									</tr>
+                	<tr>
+										<td align="center">1.2 RC3</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mgrDRvU">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mgMfXuK">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1ntuZ61V">下载</a></td>
+									</tr>
+                	<tr>
+										<td align="center">1.2 RC2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1wHTMm">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dDiyDe5">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3CcG7N">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.2 RC</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1eQdCBC2">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1dDztuMH">下载</a></td>
