Add SDK Tools 24.2 And Android Studio 1.2.1.1 Link

--- a/index.html
+++ b/index.html
@@ -224,6 +224,12 @@
                     </tr>
                 </thead>
                 <tbody>
+                <tr>
+										<td align="center">1.2.1.1</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1sjDiYIT">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1kTDvwBd">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1dDlhpGt">下载</a></td>
+									</tr>
                 	<tr>
 										<td align="center">1.2 正式版</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1mgKehW8">下载</a></td>
@@ -607,6 +613,19 @@
                 </thead>
                 <tbody>
                 <tr>
+                        <td align="center">sdk-tools-r24.2</td>
+                        <td align="center">
+                            <a href="http://pan.baidu.com/s/1ntkRd6D">installer_r24.2-windows.exe</a>  
+                            <a href="http://pan.baidu.com/s/1mgAB66s">android-sdk_r24.2-windows.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1eQnhj9o">android-sdk_r24.2-macosx.zip</a>
+                        </td>
+                        <td align="center">
+                        	<a href="http://pan.baidu.com/s/1dDhd76h">android-sdk_r24.2-linux.tgz</a>
+                        </td>
+                </tr>
+                <tr>
                         <td align="center">sdk-tools-r24.1.2</td>
                         <td align="center">
                             <a href="http://pan.baidu.com/s/1pJwVClt">installer_r24.1.2-windows.exe</a>  
@@ -618,7 +637,7 @@
                         <td align="center">
                         	<a href="http://pan.baidu.com/s/1ntzbACp">android-sdk_r24.1.2-linux.tgz</a>
                         </td>
-                    </tr>
+                  </tr>
                 	<tr>
                         <td align="center">sdk-tools-r24.0.2</td>
                         <td align="center">
