Add android-ndk-r10e and gradle 2.3/2.4 link

--- a/index.html
+++ b/index.html
@@ -1544,6 +1544,18 @@
 			    </thead>
 			    <tbody>
 			    		<tr>
+			            <td align="left">ndk-r10e</td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1jG7Yacm">32位</a> <a href="http://pan.baidu.com/s/1jG5WjL8">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1hqKTsws">64位</a>
+			            </td>
+			            <td align="center">
+			                <a href="http://pan.baidu.com/s/1kTILsoR">32位</a> <a href="http://pan.baidu.com/s/1mg5Sadq">64位</a>
+			            </td>
+			        </tr>
+			    		<tr>
 			            <td align="left">ndk-r10d</td>
 			            <td align="center">
 			                <a href="http://pan.baidu.com/s/1yc9BK">32位</a> <a href="http://pan.baidu.com/s/1dDGTrk1">64位</a>
@@ -1807,6 +1819,13 @@
                     </tr>
                 </thead>
                 <tbody>
+                	<tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1c0dcgfe">gradle-2.4-all.zip</a></td>
+                  </tr>
+                	<tr>
+                        <td align="left"><a href="http://pan.baidu.com/s/1dDEnQr3">gradle-2.3-all.zip</a>
+                        </td>
+                    </tr>
                 	<tr>
                         <td align="left"><a href="http://pan.baidu.com/s/1nt9jd25">gradle-2.2.1-all.zip</a>
                         </td>
