--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                 </thead>
                 <tbody>
                 <tr>
+										<td align="center">1.3 Preview1</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1o6OKUIQ">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mgIGdio">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1bn548rH">下载</a></td>
+									</tr>
+                <tr>
 										<td align="center">1.2.1.1</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1sjDiYIT">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1kTDvwBd">下载</a></td>
