--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                 </thead>
                 <tbody>
                 <tr>
+										<td align="center">1.3 Preview2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1hq5uz20">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3nb1Vv">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1nt5kqQd">下载</a></td>
+									</tr>
+                <tr>
 										<td align="center">1.3 Preview1</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1o6OKUIQ">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1mgIGdio">下载</a></td>
