Add Android Studio 1.2.2 Link

--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
 										<td align="center"><a href="http://pan.baidu.com/s/1mgIGdio">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1bn548rH">下载</a></td>
 									</tr>
+								<tr>
+										<td align="center">1.2.2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i32AQUD">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1sj7enLj">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3xRdJ3">下载</a></td>
+									</tr>
                 <tr>
 										<td align="center">1.2.1.1</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1sjDiYIT">下载</a></td>
