--- a/index.html
+++ b/index.html
@@ -225,6 +225,13 @@
                 </thead>
                 <tbody>
                 <tr>
+										<td align="center">1.3 Preview3</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1ntvHs2d">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1pJJZMzT">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1hkFLW">下载</a></td>
+									</tr>
+                <tr>
+                <tr>
 										<td align="center">1.3 Preview2</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1hq5uz20">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i3nb1Vv">下载</a></td>
