Add GsonFormat and ormlite-android-gradle-plugin plugin  link

--- a/index.html
+++ b/index.html
@@ -2523,6 +2523,18 @@
                         </td>
                         <td align="center"></td>
                     </tr>
+                    <tr>
+                        <td align="left">GsonFormat</td>
+                        <td align="center"><a href="https://github.com/zzz40500/GsonFormat">下载</a>
+                        </td>
+                        <td align="center"></td>
+                    </tr>
+                    <tr>
+                        <td align="left">ormlite-android-gradle-plugin</td>
+                        <td align="center"><a href="https://github.com/stephanenicolas/ormlite-android-gradle-plugin">下载</a>
+                        </td>
+                        <td align="center"></td>
+                    </tr>
                 </tbody>
             </table>
 
