Modify Search Input Style

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 													<li role="presentation"><a role="menuitem" tabindex="-1" href="#free-design-resources">Design Resources</a></li>				
 							        </ul>
 							      </li>
-							      <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" class="ts-search-input" placeholder="搜索: Android Studio"></form></li>
+							      <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li>
 							      
 							      <!--  View GitHub Project	-->
 										<!-- <li><a href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project" class="menu github"><img src="static/image/icon-github.png" alt="GitHub"/></a></li> -->
