--- a/index.html
+++ b/index.html
@@ -226,12 +226,17 @@
                 </thead>
                 <tbody>
                 <tr>
+										<td align="center">1.3 Beta</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1jGy6f5s">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1hqvm0fi">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1ntqY2At">下载</a></td>
+									</tr>
+                <tr>
 										<td align="center">1.3 Preview3</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1ntvHs2d">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1pJJZMzT">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1hkFLW">下载</a></td>
 									</tr>
-                <tr>
                 <tr>
 										<td align="center">1.3 Preview2</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1hq5uz20">下载</a></td>
