Fixed donate qrcode image likn invaid

--- a/donate.html
+++ b/donate.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="row">
           <div class="span1">
-            <h1 id="nav-title">AndroidDevTools</h1>
+            <a href="index.html" ><h1 id="nav-title">AndroidDevTools</h1></a>
           </div>
           <div class="span11">
             <menu>
@@ -161,12 +161,12 @@
 	          		</blockquote>
 		            <div class="span4"> 
 				            <h4 id="alipay" align="center">支付宝</h4>
-				            <img id="donate-method-alipay" src="./static/image/alipay_qr_code.jpg" />
+				            <img id="donate-method-alipay" src="./static/image/alipay_qr_code.png" />
 		            </div>
 		            <div class="span1"></div>
 		            <div class="span4"> 
 				            <h4 id="wechat" align="center">微信</h4>
-				            <img id="donate-method-wechat" src="./static/image/weichat_pay_qr_code.jpg" />
+				            <img id="donate-method-wechat" src="./static/image/weichat_pay_qr_code.png" />
 		            </div>
 								
           </div>
