--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="row">
           <div class="span1">
-            <h1 id="nav-title">AndroidDevTools</h1>
+            <a href="index.html" class="navbar-brand"><h1 id="nav-title">AndroidDevTools</h1></a>
           </div>
           <div class="span11">
             <menu>
