Add Tinypng link

--- a/index.html
+++ b/index.html
@@ -3187,6 +3187,13 @@
                         </td>
                         <td align="center"></td>
                     </tr>
+                    <tr>
+                        <td align="left">Tinypng</td>
+                        <td></td>
+                        <td align="center"><a href="https://tinypng.com">下载</a>
+                        </td>
+                        <td align="center"></td>
+                    </tr>
                 </tbody>
             </table>
 
