Add donors info

--- a/donate.html
+++ b/donate.html
@@ -157,7 +157,8 @@
           			<br/>
 	          		<h2 id="donate-title">捐赠</h1>
 								<blockquote>
-									<p>非常感谢您对本站和我的捐赠。支持我把本站做的更好，帮助更多的人。目前支持微信和支付宝，<strong>金额随意</strong></p>
+									<p>非常感谢您考虑对本站进行捐赠。支持把本站做的更好，帮助更多的人，<strong>金额随意。</strong></p>
+								</blockquote>
 	          		</blockquote>
 		            <div class="span4"> 
 				            <h4 id="alipay" align="center">支付宝</h4>
@@ -177,22 +178,22 @@
         <div class="row">
         	<div class="span1"></div>
           <div id="donate-list" class="span10">
-		             	<h2 id="donate-title">捐赠者列表</h2>
+		             	<h2 id="donate-title">鸣谢</h2>
 		             	<table>
 											<thead>
 												<tr>
-												<th align="center">昵称</th>
+												<th align="center">昵称/姓名</th>
 												<th align="center">金额</th>
-												<th align="center">昵称</th>
+												<th align="center">昵称/姓名</th>
 												<th align="center">金额</th>
 												</tr>
 											</thead>
 											<tbody>
 											<tr>
-												<td align="center"></td>
-												<td align="center"></td>
-												<td align="center"></td>
-												<td align="center"></td>
+												<td align="center">鞠斌</td>
+												<td align="center">¥10.24</td>
+												<td align="center">李若紫</td>
+												<td align="center">¥100</td>
 												</tr>
 											</tbody>
 									</table>
