--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 		            
             </blockquote>
             <blockquote>
-								<p>如果你觉得本站对你有帮助的话，请考虑对本站<a href="./donate.html"><strong>捐赠</strong></a>支持下，支持我把本站做的更好， <br/> 帮助更多的人。目前支持微信和支付宝，金额随意。</p>
+								<p>如果你觉得本站对你有用，你可以点击底部的分享按钮，把本站分享到社交网络让你的小伙伴和更多的人知道，<br>或者可以考虑对本站
+										<a href="./donate.html"><strong>捐赠</strong></a>支持下，支持我把本站做的更好，帮助更多的人。目前支持支付宝和微信，金额随意。
+								</p>
 	          </blockquote>
             <h1 id="android-dev-tools">
                 <a name="android-tools" class="anchor" href="#android-tools">
