--- a/index.html
+++ b/index.html
@@ -2947,6 +2947,13 @@
                         </td>
                         <td align="center"></td>
                     </tr>
+                    <tr>
+                        <td align="left">兰贝壳儿</td>
+                        <td></td>
+                        <td align="center"><a href="http://www.orchidshell.com">下载</a>
+                        </td>
+                        <td align="center"><a href="http://www.orchidshell.com/Instructions/OchidShellInstructions.htm">教程</a></td>
+                    </tr>
                 </tbody>
             </table>
 
