Add ALFI and codota Link

--- a/index.html
+++ b/index.html
@@ -2287,12 +2287,24 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
-								<td align="left">Structural Java Exception Search</td>
-								<td align="left">Java异常搜索工具</td>
-								<td align="center"><a href="http://www.brainleg.com/search">下载</a></td>
-								<td align="center"></td>
-								</tr>
+										<tr>
+											<td align="left">Structural Java Exception Search</td>
+											<td align="left">Java异常搜索工具</td>
+											<td align="center"><a href="http://www.brainleg.com/search">下载</a></td>
+											<td align="center"></td>
+										</tr>
+										<tr>
+											<td align="left">Android Library Finde</td>
+											<td align="left">最快的方式获取依赖库</td>
+											<td align="center"><a href="https://github.com/cesarferreira/alfi">下载</a></td>
+											<td align="center"></td>
+										</tr>
+										<tr>
+											<td align="left">Codota</td>
+											<td align="left">示例代码搜索网站</td>
+											<td align="center"><a href="http://www.codota.com">下载</a></td>
+											<td align="center"></td>
+										</tr>
 							</tbody>
 						</table>
 						<h4>
