Add donator info

--- a/donate.html
+++ b/donate.html
@@ -11,6 +11,11 @@
     <link href="static/css/app-theme.css" rel="stylesheet">
     <link href="static/css/google-roboto-font-face.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]><script src="static/html5shiv.min.js"></script><![endif]-->
+    <style type="text/css">
+	    .red {
+		    color: red;
+	    }
+    </style>
   </head>
   <body data-target=".content-nav">
     <header>
@@ -197,15 +202,21 @@
 														<td align="center">¥100</td>
 													</tr>
 													<tr>
-														<td align="center"><a href="https://github.com/aaronsu" target="_blank">馄饨</a></td>
+														<td align="center"><a class="red" href="https://github.com/aaronsu" target="_blank">馄饨</a></td>
 														<td align="center">¥88.88</td>
-														<td align="center"><a href="http://qiugeder.leanote.com/" target="_blank">卷帘大将</a></td>
+														<td align="center"><a class="red" href="http://qiugeder.leanote.com/" target="_blank">卷帘大将</a></td>
 														<td align="center">¥1.24</td>
 													</tr>
 													<tr>
 														<td align="center">leeyao</td>
 														<td align="center">¥10.24</td>
-														<td align="center"><a href="" target="_blank"></a></td>
+														<td align="center"><a class="red" href="http://blog.csdn.net/zc0727" target="_blank">小卒</a></td>
+														<td align="center">¥1.88</td>
+													</tr>
+													<tr>
+														<td align="center"><a class="red" href="http://weibo.com/bachfans">标哥</a></td>
+														<td align="center">¥4.99</td>
+														<td align="center"><a class="red" href="" target="_blank"></a></td>
 														<td align="center"></td>
 													</tr>
 											</tbody>
