Add donator info

--- a/donate.html
+++ b/donate.html
@@ -14,6 +14,7 @@
     <style type="text/css">
 	    .red {
 		    color: red;
+		    
 	    }
     </style>
   </head>
@@ -164,6 +165,8 @@
 	          		<h2 id="donate-title">捐赠</h1>
 								<blockquote>
 									<p>非常感谢您考虑对本站进行捐赠。支持把本站做的更好，帮助更多的人，<strong>金额随意。</strong></p>
+									<br/>
+									<p>为了感谢您的捐赠，捐赠后记得在底部留言板留下你的<strong>昵称(如果不想显示真实姓名)</strong>、<strong>金额</strong>，以及博客、<strong>Github</strong>、<br/><strong>Twitter</strong>、<strong>微博</strong> 等任何可以在社交网络上找到你的链接以便将您的信息添加到捐赠列表。🙏</p>
 								</blockquote>
 	          		</blockquote>
 		            <div class="span4"> 
@@ -216,8 +219,8 @@
 													<tr>
 														<td align="center"><a class="red" href="http://weibo.com/bachfans">标哥</a></td>
 														<td align="center">¥4.99</td>
-														<td align="center"><a class="red" href="" target="_blank"></a></td>
-														<td align="center"></td>
+														<td align="center">孟则霖</td>
+														<td align="center">¥8.6</td>
 													</tr>
 											</tbody>
 									</table>
