Add donator info

--- a/donate.html
+++ b/donate.html
@@ -225,8 +225,8 @@
 													<tr>
 														<td align="center">张家峰</td>
 														<td align="left">¥11</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">sunbeams001</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
