--- a/index.html
+++ b/index.html
@@ -230,37 +230,43 @@
                     </tr>
                 </thead>
                 <tbody>
-                <tr>
+                	<tr>
+										<td align="center">1.3 RC1</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1i3KTPid">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1mgmrPJ6">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1o61gMSi">下载</a></td>
+									</tr>
+									<tr>
 										<td align="center">1.3 Beta</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1jGy6f5s">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1hqvm0fi">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1ntqY2At">下载</a></td>
 									</tr>
-                <tr>
+										<tr>
 										<td align="center">1.3 Preview3</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1ntvHs2d">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1pJJZMzT">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1hkFLW">下载</a></td>
 									</tr>
-                <tr>
+									<tr>
 										<td align="center">1.3 Preview2</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1hq5uz20">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i3nb1Vv">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1nt5kqQd">下载</a></td>
 									</tr>
-                <tr>
+									<tr>
 										<td align="center">1.3 Preview1</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1o6OKUIQ">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1mgIGdio">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1bn548rH">下载</a></td>
 									</tr>
-								<tr>
+									<tr>
 										<td align="center">1.2.2</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i32AQUD">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1sj7enLj">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i3xRdJ3">下载</a></td>
 									</tr>
-                <tr>
+									<tr>
 										<td align="center">1.2.1.1</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1sjDiYIT">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1kTDvwBd">下载</a></td>
