Fixed https://github.com/jeromevdl/android-holo-colors-idea-pluginlink error

--- a/index.html
+++ b/index.html
@@ -2468,7 +2468,7 @@
                     </tr>
                     <tr>
                         <td align="left">Android Holo Colors IDEA Plugin</td>
-                        <td align="center"><a href="http://www.sriramramani.com/droidinspector/">下载</a>
+                        <td align="center"><a href="https://github.com/jeromevdl/android-holo-colors-idea-plugin/">下载</a>
                         </td>
                         <td align="center"></td>
                     </tr>
