--- a/donate.html
+++ b/donate.html
@@ -229,8 +229,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center">景康</td>
 														<td align="left">¥20</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">我的神</td>
+														<td align="left">¥5</td>
 													</tr>
 											</tbody>
 									</table>
