Add donator info

--- a/donate.html
+++ b/donate.html
@@ -232,6 +232,16 @@
 														<td align="center">我的神</td>
 														<td align="left">¥5</td>
 													</tr>
+													<tr>														
+														<td align="center"><a class="red" href="http://weibo.com/zhuzaifei" target="_blank">猪在飞_</a></td>
+														<td align="left">¥3.14</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
