Add donator info

--- a/donate.html
+++ b/donate.html
@@ -235,8 +235,8 @@
 													<tr>														
 														<td align="center"><a class="red" href="http://weibo.com/zhuzaifei" target="_blank">猪在飞_</a></td>
 														<td align="left">¥3.14</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">元方</td>
+														<td align="left">¥14.7</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
