Add donator info

--- a/donate.html
+++ b/donate.html
@@ -237,8 +237,8 @@
 														<td align="left">¥3.14</td>
 														<td align="center">元方</td>
 														<td align="left">¥14.7</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">王茂才</td>
+														<td align="left">¥5</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
