Modify the License for the disclaimer

--- a/index.html
+++ b/index.html
@@ -4699,21 +4699,9 @@
             <h1 id="license">
                 <a name="license" class="anchor" href="#license">
                     <span class="octicon octicon-link"></span>
-                </a>License</h1>
+                </a>Disclaimer</h1>
 
-            <pre><code>Copyright 2014 inferjay (http://www.androiddevtools.cn)
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-</code></pre>
+            <pre><code>版权归原作者所有，这里仅做收集整理，欢迎自由转载-非商用-非衍生-保持署名和网站链接。</code></pre>
 					
 					<!-- JiaThis Button BEGIN -->
 					<div id="jiathis-share-bar" class="jiathis_style">
