Add donator info

--- a/donate.html
+++ b/donate.html
@@ -239,8 +239,8 @@
 														<td align="left">¥14.7</td>
 														<td align="center">王茂才</td>
 														<td align="left">¥5</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">毛毛虫</td>
+														<td align="left">¥1.64</td>
 													</tr>
 											</tbody>
 									</table>
