--- a/donate.html
+++ b/donate.html
@@ -242,6 +242,16 @@
 														<td align="center">毛毛虫</td>
 														<td align="left">¥1.64</td>
 													</tr>
+													<tr>														
+														<td align="center">火山</td>
+														<td align="left">¥10</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
