Add donator info

--- a/donate.html
+++ b/donate.html
@@ -245,10 +245,10 @@
 													<tr>														
 														<td align="center">火山</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">刘梦开</td>
+														<td align="left">¥3.22</td>
+														<td align="center">曾小斌</td>
+														<td align="left">¥1</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
