Add donator info

--- a/donate.html
+++ b/donate.html
@@ -249,6 +249,16 @@
 														<td align="left">¥3.22</td>
 														<td align="center">曾小斌</td>
 														<td align="left">¥1</td>
+														<td align="center">徐晨星</td>
+														<td align="left">¥5</td>
+													</tr>
+													<tr>														
+														<td align="center">Haoxueren</td>
+														<td align="left">¥1.99</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
