Add donator info

--- a/donate.html
+++ b/donate.html
@@ -255,10 +255,10 @@
 													<tr>														
 														<td align="center">Haoxueren</td>
 														<td align="left">¥1.99</td>
-														<td align="center"></td>
-														<td align="left"></td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">爱琴海余晖</td>
+														<td align="left">¥20</td>
+														<td align="center">唐序晓</td>
+														<td align="left">¥7</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
