--- a/index.html
+++ b/index.html
@@ -231,6 +231,18 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.3 RC3</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1pJJwwll">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1o6KewUu">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1hqB3geK">下载</a></td>
+									</tr>
+                	<tr>
+										<td align="center">1.3 RC2</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1bnyMfJx">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1gdhdc9l">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1qW2zrGS">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.3 RC1</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1i3KTPid">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1mgmrPJ6">下载</a></td>
