Add Donator Info

--- a/donate.html
+++ b/donate.html
@@ -207,17 +207,17 @@
 														<td align="left">¥10.24</td>
 														<td align="center">李若紫</td>
 														<td align="left">¥100</td>
-														<td align="center"><a class="red" href="https://github.com/aaronsu" target="_blank">馄饨</a></td>
+														<td align="center"><a href="https://github.com/aaronsu" target="_blank">馄饨</a></td>
 														<td align="left">¥88.88</td>
-														<td align="center"><a class="red" href="http://qiugeder.leanote.com/" target="_blank">卷帘大将</a></td>
+														<td align="center"><a href="http://qiugeder.leanote.com/" target="_blank">卷帘大将</a></td>
 														<td align="left">¥1.24</td>
 													</tr>
 													<tr>
 														<td align="center">leeyao</td>
 														<td align="left">¥10.24</td>
-														<td align="center"><a class="red" href="http://blog.csdn.net/zc0727" target="_blank">小卒</a></td>
+														<td align="center"><a href="http://blog.csdn.net/zc0727" target="_blank">小卒</a></td>
 														<td align="left">¥1.88</td>
-														<td align="center"><a class="red" href="http://weibo.com/bachfans">标哥</a></td>
+														<td align="center"><a href="http://weibo.com/bachfans">标哥</a></td>
 														<td align="left">¥4.99</td>
 														<td align="center">孟则霖</td>
 														<td align="left">¥8.6</td>
@@ -233,7 +233,7 @@
 														<td align="left">¥5</td>
 													</tr>
 													<tr>														
-														<td align="center"><a class="red" href="http://weibo.com/zhuzaifei" target="_blank">猪在飞_</a></td>
+														<td align="center"><a href="http://weibo.com/zhuzaifei" target="_blank">猪在飞_</a></td>
 														<td align="left">¥3.14</td>
 														<td align="center">元方</td>
 														<td align="left">¥14.7</td>
@@ -259,14 +259,14 @@
 														<td align="left">¥20</td>
 														<td align="center">唐序晓</td>
 														<td align="left">¥7</td>
-														<td align="center"><a class="red" href="http://weibo.com/u/3254747115" target="_blank">赵小华</a></td>
+														<td align="center"><a href="http://weibo.com/u/3254747115" target="_blank">赵小华</a></td>
 														<td align="left">¥10.24</td>
 													</tr>
 													<tr>														
 														<td align="center">stormlion</td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center"><a href="http://t.qq.com/vae-xuanhuan" target="_blank">爱小说爱漫画</a></td>
+														<td align="left">¥3</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
