Add Donator Info

--- a/donate.html
+++ b/donate.html
@@ -267,8 +267,8 @@
 														<td align="left">¥10</td>
 														<td align="center"><a href="http://t.qq.com/vae-xuanhuan" target="_blank">爱小说爱漫画</a></td>
 														<td align="left">¥3</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Charn</td>
+														<td align="left">¥10.24</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
