Add Donator Info

--- a/donate.html
+++ b/donate.html
@@ -269,8 +269,8 @@
 														<td align="left">¥3</td>
 														<td align="center">Charn</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">Tiga</td>
+														<td align="left">¥2</td>
 													</tr>
 											</tbody>
 									</table>
