--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
                 </thead>
                 <tbody>
                 	<tr>
+										<td align="center">1.3 RC4</td>
+										<td align="center"><a href="http://pan.baidu.com/s/1pJCBx9p">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1hq91OX2">下载</a></td>
+										<td align="center"><a href="http://pan.baidu.com/s/1jGH5p2I">下载</a></td>
+									</tr>
+                	<tr>
 										<td align="center">1.3 RC3</td>
 										<td align="center"><a href="http://pan.baidu.com/s/1pJJwwll">下载</a></td>
 										<td align="center"><a href="http://pan.baidu.com/s/1o6KewUu">下载</a></td>
