Add Donator Info

--- a/donate.html
+++ b/donate.html
@@ -272,6 +272,16 @@
 														<td align="center">Tiga</td>
 														<td align="left">¥2</td>
 													</tr>
+													<tr>														
+														<td align="center">伟荣</td>
+														<td align="left">¥10.24</td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+														<td align="center"></td>
+														<td align="left"></td>
+													</tr>
 											</tbody>
 									</table>
 		            </div>
