--- a/donate.html
+++ b/donate.html
@@ -275,8 +275,8 @@
 													<tr>														
 														<td align="center">伟荣</td>
 														<td align="left">¥10.24</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center"><a href="http://t.qq.com/uspider" target="_blank">xiaopeng</a></td>
+														<td align="left">¥10</td>
 														<td align="center"></td>
 														<td align="left"></td>
 														<td align="center"></td>
