Add Donator Info

--- a/donate.html
+++ b/donate.html
@@ -277,8 +277,8 @@
 														<td align="left">¥10.24</td>
 														<td align="center"><a href="http://t.qq.com/uspider" target="_blank">xiaopeng</a></td>
 														<td align="left">¥10</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">宁</td>
+														<td align="left">¥12</td>
 														<td align="center"></td>
 														<td align="left"></td>
 													</tr>
