Add Donator Info

--- a/donate.html
+++ b/donate.html
@@ -279,8 +279,8 @@
 														<td align="left">¥10</td>
 														<td align="center">宁</td>
 														<td align="left">¥12</td>
-														<td align="center"></td>
-														<td align="left"></td>
+														<td align="center">sllt</td>
+														<td align="left">¥0.1</td>
 													</tr>
 											</tbody>
 									</table>
